force-app/main/default/objects/MonthlyInputRow__c/MonthlyInputRow__c.object-meta.xml
<CustomObject>
    <label>[FTD]Monthly Input Row</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>[FTD]Monthly Input Rows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>