force-app/main/default/objects/MonthlyInputRow__c/fields/Category1__c.field-meta.xml
<CustomField>
    <fullName>Category1__c</fullName>
    <label>Category1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>