force-app/main/default/objects/MonthlyInputRow__c/fields/Category2__c.field-meta.xml
<CustomField>
    <fullName>Category2__c</fullName>
    <label>Category2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>