force-app/main/default/objects/MonthlyInputRow__c/fields/Category3__c.field-meta.xml
<CustomField>
    <fullName>Category3__c</fullName>
    <label>Category3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>