force-app/main/default/objects/MonthlyInputRow__c/fields/FormFieldKey__c.field-meta.xml
<CustomField>
    <fullName>FormFieldKey__c</fullName>
    <label>Form Field Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>