force-app/main/default/objects/MonthlyInputRow__c/fields/MonthlyReport__c.field-meta.xml
<CustomField>
    <fullName>MonthlyReport__c</fullName>
    <label>Monthly Report</label>
    <referenceTo>MonthlyReport__c</referenceTo>
    <relationshipLabel>Monthly Input Rows</relationshipLabel>
    <relationshipName>MonthlyInputRows</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>